# pytest_demo

./: .env  .gitignore  .prettierrc  README.md  Taskfile.yml  pyproject.toml  pytest.ini  requirements.txt
api/: __init__.py  user.py
core/: __init__.py  rest_client.py  result_base.py
models/: __init__.py
models/api/: __init__.py  user.py
models/ui/: __init__.py  login.py
operation/: __init__.py  user.py
script/: align_yaml.py
testcases/: base_data.yaml  conftest.py
testcases/api/: conftest.py
testcases/api/api_test/user/: test_01_user_info.py  test_data.yaml
testcases/api/api_test/user/__snapshots__/: test_01_user_info.ambr
testcases/api/api_test/user/__snapshots__/test_01_user_info/: TestUserInfo.test_user_info[正确用户名密码_登录成功].json  TestUserInfo.test_user_info_with_basic_auth[错误用户名_登录失败].json
testcases/api/scenario_test/: test_01_user_variable.py  test_data.yaml
testcases/api/scenario_test/__snapshots__/: test_01_user_variable.ambr
testcases/api/scenario_test/__snapshots__/test_01_user_variable/: TestUserVariable.test_user_variable[test].json
testcases/api_test/user/: test_01_user_info.py  test_data.yaml
testcases/e2e/: conftest.py  test_01_login.py
testcases/e2e/login/: test_01_login.py  test_data.yaml
testcases/scenario_test/: test_01_register_login_list.py
testcases/scenario_test/snapshots/test_01_user_variable/test_user_variable/0/: get_user_variable_schema.json
utils/: __init__.py  _utils.py  artifacts_recorder.py  asserts.py  async_mysql_client.py  async_pg_client.py  env_manage.py  environment.py  extensions.py  read_data.py  schema.py  step_context.py  test_data_manage.py
(+2 files in other folders)
